<resources>

    <!-- RECHTSKLICK auf die original strings-xml, OPEN TRANSLATIONS EDITOR für für eine TabellenAnsicht der versch. Sprachen -->

    <!-- general strings -->
    <string name="settings">Settings</string>
    <string name="app_name">Eventastic</string>
    <string name="events_city">All Events</string>
    <string name="participating_events">My Events</string>
    <string name="all_events_title">Events in </string>
    <string name="content_description_logo">Logo Eventastic</string>

    <!-- strings for Information activity_about an Event-->
    <string name="button_add">Want to Participate</string>
    <string name="button_added">Have fun!</string>
    <string name="button_delete">Don´t want to participate</string>
    <string name="button_deleted">You will not participate.</string>
    <string name="city_in">in </string>

    <!-- strings for eventNearLocation -->
    <string name="to_cities">To all possible cities</string>
    <string name="your_location">Your Location is</string>
    <string name="please_wait">Please wait...</string>

    <!-- strings for AddEvent -->
    <string name="edit_city">Choose a city</string>
    <string name="edit_eventType">Select event type</string>
    <string name="button_text_enter">Enter</string>
    <string name="title_add_event">Add new Event</string>
    <string name="time_picker">timePicker</string>
    <string name="date_picker">datePicker</string>
    <string name="adding_0">0</string>
    <string name="adding_double_dot">:</string>

    <string-array name="cities_array">
        <item>Aachen</item>
        <item>Augsburg</item>
        <item>Berlin</item>
        <item>Bielefeld</item>
        <item>Bochum</item>
        <item>Bonn</item>
        <item>Braunschweig</item>
        <item>Bremen</item>
        <item>Chemnitz</item>
        <item>Darmstadt</item>
        <item>Dortmund</item>
        <item>Dresden</item>
        <item>Duisburg</item>
        <item>Düsseldorf</item>
        <item>Erfurt</item>
        <item>Erlangen</item>
        <item>Essen</item>
        <item>Frankfurt am Main</item>
        <item>Freiburg im Breisgau</item>
        <item>Gelsenkirchen</item>
        <item>Hagen</item>
        <item>Halle</item>
        <item>Hamburg</item>
        <item>Hamm</item>
        <item>Hannover</item>
        <item>Heidelberg</item>
        <item>Herne</item>
        <item>Ingolstadt</item>
        <item>Kassel</item>
        <item>Kiel</item>
        <item>Köln</item>
        <item>Krefeld</item>
        <item>Leipzig</item>
        <item>Leverkusen</item>
        <item>Ludwigshafen</item>
        <item>Lübeck</item>
        <item>Magdeburg</item>
        <item>Mainz</item>
        <item>Mannheim</item>
        <item>Mönchengladbach</item>
        <item>Mülheim an der Ruhr</item>
        <item>München</item>
        <item>Neuss</item>
        <item>Nürnberg</item>
        <item>Oberhausen</item>
        <item>Oldenburg</item>
        <item>Osnabrück</item>
        <item>Regensburg</item>
        <item>Rostock</item>
        <item>Saarbrücken</item>
        <item>Solingen</item>
        <item>Stuttgart</item>
        <item>Trier</item>
        <item>Ulm</item>
        <item>Wiesbaden</item>
        <item>Wolfsburg</item>
        <item>Wuppertal</item>
        <item>Würzburg</item>
    </string-array>

    <string-array name="eventtype_array">
        <item>concert</item>
        <item>party</item>
        <item>festival</item>
        <item>theater</item>
        <item>comedy</item>
        <item>sports event</item>
        <item>other</item>
    </string-array>


    <!-- string for AboutTheApp -->
    <string name="about_this_App">About this App</string>

    <string name="about_this_app_what_tab">about</string>
    <string name="about_this_app_what">What it is about.</string>
    <string name="about_this_app_what_text">This app is called EVENTASTIC. It helps you finding
        upcoming events in your city. Also you can add an event to the list, so that other users of this app can
        participate in it. Once used EVENTASTIC, you will never want to explore the nightlife without it again.</string>

    <string name="about_this_app_how_tab">how</string>
    <string name="about_this_app_how">How to use it.</string>
    <string name="about_this_app_how_text">EVENTASTIC is for free very easy to use. You don´t have to create
        an account and sign in. First, you simply select a CITY or let the app find your position. Then have a look on
        different types of events and click on I WANT TO PARTICIPATE. Your upcoming events will be listed on
        PARTICIPATING EVENTS. That´s it.</string>

    <string name="about_this_app_help_tab">support</string>
    <string name="about_this_app_help">What you can do.</string>
    <string name="about_this_app_help_text">To improve the use of this application, tell your friends and
        family about EVENTASTIC. The more people using this app, the more
        events will be shared and the better for all of us.</string>

    <string name="about_this_app_contact_tab">Contact</string>
    <string name="about_this_app_contact">Contact us.</string>
    <!-- eventastic.app@gmail.com, password:projekt2016 -->
    <string name="about_this_app_contact_text">Do you have any suggestions, criticisms, or anything
        else that you want to tell us? Simply write us an e-mail to eventastic.app@gmail.com. We are looking
        forward to hearing from you!</string>
    <string name="button_send_mail">Write mail</string>

    <!-- strings for CalendarActivity -->
    <string name="calendar">Calendar</string>
    <string name="calendar_next_event">YOUR NEXT EVENT:</string>
    <string name="nothing_on_list">There´s no upcoming event on your list. CLICK HERE and add some!</string>
    <string name="share_intent_type">text/plain</string>
    <string name="simple_date_format_2">dd.MM.yyyy</string>
    <string name="simple_date_format_1">dd.MM.yyyy HH:mm</string>

    <!-- strings für Toasts -->
    <string name="toast_added">You added the Event \'</string>
    <string name="toast_deleted">Event is deleted from your list.</string>

    <!-- strings for Notification -->
    <string name="notification_title">Eventastic!</string>
    <string name="notification_text">One more hour to go... </string>
    <string name="notification_text_large">Don´t forget, you have an Event in one hour... Click for more information. We hope you have a great time!</string>


    <!-- strings for HINTS -->
    <string name="hint_title">TITLE</string>
    <string name="hint_city">City</string>
    <string name="hint_eventType">Event type</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>
    <string name="hint_definition">Definition</string>

    <string name="hint_edit_title">Enter the event title</string>
    <string name="hint_edit_date">Select a date</string>
    <string name="hint_edit_time">Select a time</string>
    <string name="hint_edit_info">Add important information to the event</string>

    <!-- strings for sharing text/email -->
    <string name="message_share">Hey there! Check out the event %1$s in %2$s on Eventastic!</string>
    <string name="e_mail">eventastic.app@gmail.com</string>
    <string name="extra_subject">EVENTASTIC</string>
    <string name="extra_body">Hey there, let´s talk about EVENTASTIC…</string>
    <string name="choose_email_client">Choose an email client.</string>

    <!-- strings for AllEvents-->
    <string name="location">Location</string>
    <string name="button_to_all_cities">To all Possible Cities</string>
    <string name="dialog_title">Access to your location.</string>
    <string name="dialog_message">Change the settings to get events in your neighbourhood.</string>
    <string name="dialog_pos_button">OK</string>
    <string name="dialog_neg_button">No</string>
    <string name="button_to_events_in_neighborhood">to events in your neighbourhood</string>

    <!--String for putting an events into an intent-->
    <string name="event_in_intent">event</string>

    <!--String for putting a city into an intent-->
    <string name="selected_city">selected_city</string>

    <!--String for CityAdapter-->
    <string name="in_"> in </string>

    <!--String for ExternDatabase-->
    <string name="firebase_url">https://android-129c6.firebaseio.com/</string>
    <string name="firebase_child">events</string>

    <!--String for checking network connection-->
    <string name="network_title">No network available.</string>
    <string name="network_message">Check your network connection!</string>
    <string name="network_button">OK</string>

    <!--String for preferences.xml-->
    <string name="pref_title">Location</string>
    <string name="pref_key">Location</string>
    <string name="pref_summary">Access to your location</string>
    <string name="pref_default_value">false</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="pref_key_notifications">Notifications</string>
    <string name="pref_summary_notifications">App may send notifications.</string>
    <string name="pref_noti_default_value">true</string>
    <string name="permissions">Permissions</string>
    <string name="toast_added_to_custom_list">You added this event to your list.</string>
    <string name="toast_fields_missing">Please fill in all fields.</string>


</resources>

