<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kristine.eventastic.Activities.EventAlone">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/hint_title"
        android:id="@+id/clicked_event_titel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clicked_event_titel"
        android:id="@+id/first_linear_layout"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_eventType"
            android:id="@+id/clicked_event_type"
            android:layout_weight="0.5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_city"
            android:id="@+id/clicked_event_city"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_linear_layout"
        android:id="@+id/second_linear_layout"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            android:id="@+id/clicked_event_date"
            android:layout_weight="0.4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_time"
            android:id="@+id/clicked_event_time"
            android:layout_weight="0.6"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="New Text"
        android:id="@+id/clicked_event_definition"
        android:layout_below="@+id/second_linear_layout"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:text="@string/button_add"
        android:id="@+id/add_event_button"
        android:layout_below="@+id/clicked_event_definition"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
