<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.example.kristine.eventastic.Activities.AllInformationsOfAnEvent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/hint_title"
        android:textSize="@dimen/title_text_size"
        android:id="@+id/clicked_event_titel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_margin="@dimen/margin_xsmall"
        android:textStyle="bold"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clicked_event_titel"
        android:id="@+id/first_linear_layout"
        android:layout_marginTop="@dimen/margin_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_city"
            android:textStyle="italic"
            android:id="@+id/clicked_event_city"
            android:layout_weight="0.5"
            android:textSize="@dimen/info_event_text_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_eventType"
            android:id="@+id/clicked_event_type"
            android:layout_weight="0.5"
            android:textSize="@dimen/info_event_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_linear_layout"
        android:id="@+id/second_linear_layout"
        android:layout_marginTop="@dimen/margin_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            android:drawableLeft="@drawable/date"
            android:drawableStart="@drawable/date"
            android:id="@+id/clicked_event_date"
            android:layout_weight="0.5"
            android:textSize="@dimen/info_event_text_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_time"
            android:drawableLeft="@drawable/time"
            android:drawableStart="@drawable/time"
            android:id="@+id/clicked_event_time"
            android:layout_weight="0.5"
            android:textSize="@dimen/info_event_text_size" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="New Text"
        android:id="@+id/clicked_event_definition"
        android:layout_below="@+id/second_linear_layout"
        android:layout_marginTop="@dimen/margin_small"
        android:textSize="@dimen/info_event_text_small_size"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_large"
        android:textColor="@color/white"
        android:background="@color/red"
        android:text="@string/button_add"
        android:id="@+id/add_event_button"
        android:layout_below="@+id/clicked_event_definition"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
